--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="Hard">Hard</string>
     <string name="Endless">Endless</string>
     <string name="nanidowoerandene">難易度を選んでね</string>
+    <string name="maehe">前へ</string>
+    <string name="tugihe">次へ</string>
 </resources>
