--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">JankenApp</string>
     <string name="たたいてかぶって">たたいてかぶって</string>
-    <string name="チョキ">チョキ</string>
+    <string name="choki">チョキ</string>
     <string name="ruleImage">ruleImage</string>
-    <string name="グー">グー</string>
-    <string name="パー">パー</string>
-    <string name="ピコピコハンマー" />
-    <string name="ヘルメット">ヘルメット</string>
+    <string name="gu">グー</string>
+    <string name="pa">パー</string>
+    <string name="s" />
+    <string name="Helmet">ヘルメット</string>
     <string name="result_draw">あいこです</string>
     <string name="jankenpon">じゃんけんポン</string>
     <string name="start">スタート</string>
@@ -20,4 +20,5 @@
     <string name="nanidowoerandene">難易度を選んでね</string>
     <string name="back">前へ</string>
     <string name="next">次へ</string>
+    <string name="hummer">ハンマー</string>
 </resources>
